--- a/index.html
+++ b/index.html
@@ -146,43 +146,43 @@
 			</div>
 			<!--???? -->
 			<div class="out_back">
-				<img src="2.JPG" class="pic" />
+				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/2.JPG" class="pic" />
 			</div>
 			<!--???? -->
 			<div class="out_left">
-				<img src="3.JPG" class="pic" />
+				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/3.JPG" class="pic" />
 			</div>
 			<!--???? -->
 			<div class="out_right">
-				<img src="4.JPG" class="pic" />
+				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/4.JPG" class="pic" />
 			</div>
 			<!--???? -->
 			<div class="out_top">
-				<img src="5.JPG" class="pic" />
+				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/5.JPG" class="pic" />
 			</div>
 			<!--???? -->
 			<div class="out_bottom">
-				<img src="6.JPG" class="pic" />
+				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/6.JPG" class="pic" />
 			</div>
 
 			<!--???? -->
 			<span class="in_front">
-				<img src="7.JPG" class="in_pic" />
+				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/7.JPG" class="in_pic" />
 			</span>
 			<span class="in_back">
-			     <img src="7.JPG" class="in_pic" />
+			     <img src="https://github.com/wanglijie01/biel-bienne/blob/master/7.JPG" class="in_pic" />
 			</span>
 			<span class="in_left">
-				<img src="7.JPG" class="in_pic" />
+				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/7.JPG" class="in_pic" />
 			</span>
 			<span class="in_right">
-				<img src=7.JPG" class="in_pic" />
+				<img src=https://github.com/wanglijie01/biel-bienne/blob/master/7.JPG" class="in_pic" />
 			</span>
 			<span class="in_top">
-				<img src="7.JPG" class="in_pic" />
+				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/7.JPG" class="in_pic" />
 			</span>
 			<span class="in_bottom">
-				<img src="7.JPG" class="in_pic" />
+				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/7.JPG" class="in_pic" />
 			</span>
 		</div>
 
