--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
 		<div class="cube">
 			<!--???? -->
 			<div class="out_front">
-				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/1.JPG" class="pic" />
+				<img src="1.JPG" class="pic" />
 			</div>
 			<!--???? -->
 			<div class="out_back">
-				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/2.JPG" class="pic" />
+				<img src="2.JPG" class="pic" />
 			</div>
 			<!--???? -->
 			<div class="out_left">
