--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@
 			</div>
 			<!--???? -->
 			<div class="out_left">
-				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/3.JPG" class="pic" />
+				<img src="3.JPG" class="pic" />
 			</div>
 			<!--???? -->
 			<div class="out_right">
-				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/4.JPG" class="pic" />
+				<img src="4.JPG" class="pic" />
 			</div>
 			<!--???? -->
 			<div class="out_top">
-				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/5.JPG" class="pic" />
+				<img src="5.JPG" class="pic" />
 			</div>
 			<!--???? -->
 			<div class="out_bottom">
-				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/6.JPG" class="pic" />
+				<img src="6.JPG" class="pic" />
 			</div>
 
 			<!--???? -->
