--- a/index.html
+++ b/index.html
@@ -167,22 +167,22 @@
 
 			<!--???? -->
 			<span class="in_front">
-				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/7.JPG" class="in_pic" />
+				<img src="7.JPG" class="in_pic" />
 			</span>
 			<span class="in_back">
-			     <img src="https://github.com/wanglijie01/biel-bienne/blob/master/7.JPG" class="in_pic" />
+			     <img src="7.JPG" class="in_pic" />
 			</span>
 			<span class="in_left">
-				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/7.JPG" class="in_pic" />
+				<img src="7.JPG" class="in_pic" />
 			</span>
 			<span class="in_right">
-				<img src=https://github.com/wanglijie01/biel-bienne/blob/master/7.JPG" class="in_pic" />
+				<img src=7.JPG" class="in_pic" />
 			</span>
 			<span class="in_top">
-				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/7.JPG" class="in_pic" />
+				<img src="7.JPG" class="in_pic" />
 			</span>
 			<span class="in_bottom">
-				<img src="https://github.com/wanglijie01/biel-bienne/blob/master/7.JPG" class="in_pic" />
+				<img src="7.JPG" class="in_pic" />
 			</span>
 		</div>
 
